<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:fontFamily="@font/poppins"
        android:background="@color/beige">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="50dp" android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="50dp" android:layout_marginBottom="50dp">

        <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="34sp"
                android:textStyle="bold"
                android:textColor="@color/blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="48dp"
                app:layout_constraintHorizontal_bias="0.503"/>
        <TextView
                android:id="@+id/welcomeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to"
                android:textSize="24sp"
                android:fontWeight="500"
                android:textColor="@color/blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"/>
        <ImageView
                android:id="@+id/homeImage"
                android:layout_width="201dp"
                android:layout_height="289dp"
                app:srcCompat="@drawable/login_img"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/welcomeTextView" android:layout_marginTop="76dp"
                app:layout_constraintHorizontal_bias="0.504"/>

        <EditText
                android:id="@+id/editTextText"
                android:layout_width="311dp"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/utilisateur"
                android:background="@drawable/rounded_search"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:autofillHints=""
                app:layout_constraintHorizontal_bias="1.0" android:layout_marginBottom="37dp"
                app:layout_constraintBottom_toTopOf="@+id/oldCalorieValue"/>
        <TextView
                android:id="@+id/oldCalorieValue"
                android:layout_width="310dp"
                android:layout_height="48dp"
                android:text="TextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/homeCalculate" android:layout_marginBottom="12dp"/>
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/homeCalculate"
                android:layout_width="141dp"
                android:layout_height="48dp"
                android:text="@string/calculer"
                android:background="@drawable/rounded_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/beige" app:layout_constraintHorizontal_bias="0.005"/>
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/graphBtn"
                android:layout_width="141dp"
                android:layout_height="48dp"
                android:text="@string/voir_mon_graphique"
                android:background="@drawable/rounded_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/beige" app:layout_constraintHorizontal_bias="1.0"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>